[WebGPU] External texture reads do not take into account size differences between different planes https://bugs.webkit.org/show_bug.cgi?id=288962 rdar://146019521

Reviewed by Tadeu Zagallo.

textureLoad on external textures didn't factor in difference in size between planes.

* LayoutTests/fast/webgpu/regression/repro_288962-expected.png: Added.
* LayoutTests/fast/webgpu/regression/repro_288962-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_288962.html: Added.
Add regression test.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::emitTextureLoad):

Canonical link: https://commits.webkit.org/291536@main